[gd_scene load_steps=3 format=2]

[ext_resource path="res://components/widgets/DatePicker.gd" type="Script" id=1]
[ext_resource path="res://assets/theme/dark_theme.tres" type="Theme" id=2]

[node name="DatePicker" type="PanelContainer"]
margin_right = 211.0
margin_bottom = 225.0
rect_min_size = Vector2( 211, 225 )
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 207.0
margin_bottom = 221.0

[node name="CurrentDateContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 202.0
margin_bottom = 24.0
alignment = 1

[node name="PrevYear" type="Button" parent="VBoxContainer/CurrentDateContainer"]
margin_right = 24.0
margin_bottom = 24.0
text = "<<"
flat = true

[node name="PrevMonth" type="Button" parent="VBoxContainer/CurrentDateContainer"]
margin_left = 28.0
margin_right = 44.0
margin_bottom = 24.0
text = "<"
flat = true

[node name="Label" type="Label" parent="VBoxContainer/CurrentDateContainer"]
margin_left = 48.0
margin_top = 2.0
margin_right = 154.0
margin_bottom = 22.0
size_flags_horizontal = 3
text = "2022-07-11"
align = 1
valign = 1

[node name="NextMonth" type="Button" parent="VBoxContainer/CurrentDateContainer"]
margin_left = 158.0
margin_right = 174.0
margin_bottom = 24.0
text = ">"
flat = true

[node name="NextYear" type="Button" parent="VBoxContainer/CurrentDateContainer"]
margin_left = 178.0
margin_right = 202.0
margin_bottom = 24.0
text = ">>"
flat = true

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
margin_top = 28.0
margin_right = 202.0
margin_bottom = 216.0
size_flags_vertical = 3
columns = 7

[connection signal="pressed" from="VBoxContainer/CurrentDateContainer/PrevYear" to="." method="_on_PrevYear_pressed"]
[connection signal="pressed" from="VBoxContainer/CurrentDateContainer/PrevMonth" to="." method="_on_PrevMonth_pressed"]
[connection signal="pressed" from="VBoxContainer/CurrentDateContainer/NextMonth" to="." method="_on_NextMonth_pressed"]
[connection signal="pressed" from="VBoxContainer/CurrentDateContainer/NextYear" to="." method="_on_NextYear_pressed"]
